# parallel-computing

./: .gitignore
mpiProblem/: CMakeLists.txt  main.cpp  Задачи по MPI.txt
mpiProblem/problems/: mpi_tasks.h  t1_hw.cpp  t2_array_max.cpp  t3_PI.cpp
openmpTasks/: CMakeLists.txt  main.cpp
openmpTasks/src/openmpProblems/: omp_tasks.h  t10_matrix_maxmin.cpp  t11_atomic.cpp  t12_div.cpp  t1_hello_world.cpp  t2_if.cpp  t3_private.cpp  t4_minmax.cpp  t5_section.cpp  t6_reduction.cpp  t7_schedule.cpp  t8_schedule.cpp  t9_sc_matrix.cpp
openmpTasks/task description/: OpenMP задачки.txt
